objects/C01__c.object
<CustomObject>
    <fields>
        <fullName>Co1_field_1__c</fullName>
        <label>Co1 field 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co1_field_2__c</fullName>
        <label>Co1 field 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co1_field3__c</fullName>
        <label>co1 field3</label>
        <length>145</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co1_field4__c</fullName>
        <label>co1 field4</label>
        <type>Phone</type>
    </fields>
    <label>C01</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>C01 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C01s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>